[package]
name = "two_d_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.14.2", features = ["wayland","dynamic_linking"] }
bevy_rapier2d = { version = "0.27.0", features = ["debug-render-2d", "simd-stable"] }
bevy-inspector-egui = "0.27.0"